--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,15 @@ os:
   - linux
 julia:
   - 1.0
-  - 1.1
   - 1.2
   - nightly
 notifications:
   email: false
-#script: # the default script is equivalent to the following
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("Survival"); Pkg.test("Survival"; coverage=true)';
-#after_success:
-#  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
+matrix:
+  allow_failures:
+  - julia: nightly
+after_success:
+  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())';
 #jobs:
 #  include:
 #    - stage: "Documentation"
