--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "EDFFiles"
+name = "EDF"
 uuid = "ccffbfc1-f56e-50fb-a33b-53d1781b2825"
 authors = ["Beacon Biosignals, Inc."]
 version = "0.1.0"
