--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ os:
   - linux
 julia:
   - 1.0
-  - 1.2
-  - nightly
+  - 1.3
+if: branch = master OR tag IS present OR type = pull_request
 notifications:
   email: false
 matrix:
