--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,16 @@
 language: julia
 os:
   - linux
+if: branch = master OR tag IS present OR type = pull_request
 julia:
   - 1.0
   - 1.3
-if: branch = master OR tag IS present OR type = pull_request
 notifications:
   email: false
 matrix:
   allow_failures:
   - julia: nightly
-after_success:
-  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())';
+codecov: true
 jobs:
   include:
     - stage: "Documentation"
