--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,12 +4,12 @@ on:
       paths-ignore:
         - 'README.md'
       branches:
-        - main
+        - master
   pull_request:
       paths-ignore:
         - 'README.md'
       branches:
-        - main
+        - master
 jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
