--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,12 @@ authors = ["Beacon Biosignals, Inc."]
 version = "0.6.2"
 
 [deps]
+BitIntegers = "c3b6d118-76ef-56ca-8cc7-ebb389d030a1"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
+BitIntegers = "0.2"
 julia = "1.4"
 
 [extras]
