--- a/Project.toml
+++ b/Project.toml
@@ -6,10 +6,12 @@ version = "0.7.0"
 [deps]
 BitIntegers = "c3b6d118-76ef-56ca-8cc7-ebb389d030a1"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+FilePathsBase = "48062228-2e41-5def-b9a4-89aafe57970f"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
 BitIntegers = "0.2"
+FilePathsBase = "0.9"
 julia = "1.4"
 
 [extras]
