--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,8 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.4'
+          - '1.4'  # Earliest supported version
+          - '1'    # Latest release
           - 'nightly'
         os:
           - ubuntu-latest
