--- a/Project.toml
+++ b/Project.toml
@@ -6,16 +6,16 @@ version = "0.7.1"
 [deps]
 BitIntegers = "c3b6d118-76ef-56ca-8cc7-ebb389d030a1"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-FilePathsBase = "48062228-2e41-5def-b9a4-89aafe57970f"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
 BitIntegers = "0.2"
-FilePathsBase = "0.9"
+FilePathsBase = "0.9.13"
 julia = "1.4"
 
 [extras]
+FilePathsBase = "48062228-2e41-5def-b9a4-89aafe57970f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["FilePathsBase", "Test"]
