--- a/Project.toml
+++ b/Project.toml
@@ -9,13 +9,19 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
+Accessors = "0.1"
 BitIntegers = "0.2"
 FilePathsBase = "0.9.13"
+IOCapture = "0.2.3"
+PyMNE = "0.2.2"
 julia = "1.4"
 
 [extras]
+Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
 FilePathsBase = "48062228-2e41-5def-b9a4-89aafe57970f"
+IOCapture = "b5f81e59-6552-4d32-b1f0-c071b021bf89"
+PyMNE = "6c5003b2-cbe8-491c-a0d1-70088e6a0fd6"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["FilePathsBase", "Test"]
+test = ["Accessors", "FilePathsBase", "IOCapture", "PyMNE", "Test"]
