--- a/.github/workflows/Format.yml
+++ b/.github/workflows/Format.yml
@@ -35,6 +35,7 @@ jobs:
         run: |
           julia --project=format -e 'using Pkg; Pkg.instantiate()'
           julia --project=format 'format/run.jl'
+      - run: git diff
       - uses: reviewdog/action-suggester@v1
         if: ${{ github.event_name == 'pull_request' && github.event.pull_request.draft == false }}
         with:
