--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+EDF = "ccffbfc1-f56e-50fb-a33b-53d1781b2825"
 
 [compat]
-Documenter = "0.27"
+Documenter = "1.10"
