--- a/Project.toml
+++ b/Project.toml
@@ -5,17 +5,19 @@ version = "0.8.0"
 
 [deps]
 BitIntegers = "c3b6d118-76ef-56ca-8cc7-ebb389d030a1"
+Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
 Aqua = "0.8"
 BitIntegers = "0.2, 0.3"
+Compat = "3.47.0, 4.10.0"
 Dates = "1"
 FilePathsBase = "0.9.13"
 Printf = "1"
 Test = "1"
-julia = "1.10"
+julia = "1.4"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
