--- a/Project.toml
+++ b/Project.toml
@@ -13,10 +13,10 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Aqua = "0.8"
 BitIntegers = "0.2, 0.3"
 Compat = "3.47.0, 4.10.0"
-Dates = "1"
+Dates = "0, 1"
 FilePathsBase = "0.9.13"
-Printf = "1"
-Test = "1"
+Printf = "0, 1"
+Test = "0, 1"
 julia = "1.4"
 
 [extras]
