--- a/Project.toml
+++ b/Project.toml
@@ -5,17 +5,24 @@ version = "0.8.1"
 
 [deps]
 BitIntegers = "c3b6d118-76ef-56ca-8cc7-ebb389d030a1"
+Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
+Aqua = "0.8"
 BitIntegers = "0.2, 0.3"
+Compat = "3.47.0, 4.10.0"
+Dates = "0, 1"
 FilePathsBase = "0.9.13"
+Printf = "0, 1"
+Test = "0, 1"
 julia = "1.4"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 FilePathsBase = "48062228-2e41-5def-b9a4-89aafe57970f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["FilePathsBase", "Test"]
+test = ["Aqua", "FilePathsBase", "Test"]
